--- a/app/views/quizzes/new.html.haml
+++ b/app/views/quizzes/new.html.haml
@@ -1,6 +1,6 @@
 %h1 Quizzes#new
 %p Find me in app/views/quizzes/new.html.erb
 
-- form_for @quiz do |f|
- 	= f.text_field :title
+= form_for @quiz do |f|
+  = f.text_field :title
   = f.submit
