Changed question model to belong to quiz, created answer model

--- a/app/views/quizzes/new.html.haml
+++ b/app/views/quizzes/new.html.haml
@@ -2,5 +2,5 @@
 %p Find me in app/views/quizzes/new.html.erb
 
 = form_for @quiz do |f|
-  = f.text_field :title
+  = f.text_field :title, placeholder: 'Your title here'
   = f.submit
