Added destroy action, split form into partials

--- a/app/views/quizzes/edit.html.haml
+++ b/app/views/quizzes/edit.html.haml
@@ -1,9 +1,13 @@
-= form_for @quiz do |f|
-  / = f.error_messages
-  = f.text_field :title, placeholder: 'Your title here'
+= render 'form'
 
-  = f.fields_for :questions do |builder|
-    = builder.label :query, "Question"
-    = builder.text_area :query, :rows => 3
+/ = form_for @quiz do |f|
+/   / = f.error_messages
+/   = f.text_field :title, placeholder: 'Your title here'
 
-  = f.submit "Submit"
+/   = f.fields_for :questions do |builder|
+/     = builder.label :query, "Question"
+/     = builder.text_area :query, :rows => 3
+/     = builder.label :_destroy, "Remove Question"
+/     = builder.check_box :_destroy
+
+/   = f.submit "Submit"
