Added nested answer fields, update and destroy actions

--- a/app/views/quizzes/_question_fields.html.haml
+++ b/app/views/quizzes/_question_fields.html.haml
@@ -2,3 +2,6 @@
 = f.text_area :query, :rows => 3
 = f.label :_destroy, "Remove Question"
 = f.check_box :_destroy
+
+= f.fields_for :answers do |builder|
+  = render 'answer_fields', :f => builder
