--- a/app/views/quizzes/_question_fields.html.haml
+++ b/app/views/quizzes/_question_fields.html.haml
@@ -1,7 +1,8 @@
-= f.label :query, "Question"
-= f.text_area :query, :rows => 3
-= f.label :_destroy, "Remove Question"
-= f.check_box :_destroy
+.question
+  = f.label :query, "Question"
+  = f.text_area :query, :rows => 3
+  = f.hidden_field :_destroy
+  = link_to "Remove", "#", class: "remove_question", name: "remove_question", id: "remove_question"
 
-= f.fields_for :answers do |builder|
-  = render 'answer_fields', :f => builder
+  = f.fields_for :answers do |builder|
+    = render 'answer_fields', :f => builder
