--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,19 @@
-%h1 Users#new
-%p Find me in app/views/users/new.html.haml
+%h1 Sign up
 
-Sign up
+.row
+  .form
+    = form_for @user do |f|
+
+      = f.label :name
+      = f.text_field :name
+
+      = f.label :email
+      = f.text_field :email
+
+      = f.label :password
+      = f.password_field :password
+
+      = f.label :password_confirmation, "Confirmation"
+      = f.password_field :password_confirmation
+
+      = f.submit "Create my account", class: "submit_button"
