--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,5 +7,6 @@
 
 %body
   = render 'layouts/header'
-  = flash[:message]
+  = flash.each do |key, value|
+    = content_tag(:div, value, class: "alert alert-#{key}")
   = yield
