--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Sign up
+%h1 Update your profile
 
 .row
   .form
@@ -17,4 +17,4 @@
       = f.label :password_confirmation, "Confirmation"
       = f.password_field :password_confirmation
 
-      = f.submit "Create my account", class: "submit_button"
+      = f.submit "Save changes", class: "submit_button"
