--- a/app/views/quizzes/_answer_fields.html.haml
+++ b/app/views/quizzes/_answer_fields.html.haml
@@ -1,8 +1,9 @@
 .answer
   = f.label :response, "Answer"
   = f.text_area :response
-  /  = f.label :_destroy, "Remove"
-  /  = f.check_box :_destroy, id: "delete_answer"
+
+  = f.label :correctness, "Correct Answer?"
+  = f.check_box :correctness
 
   = f.hidden_field :_destroy
   = link_to "Remove", "#", class: "remove_answer", name: "remove_answer", id: "remove_answer"
