Resolved issue with deleting questions/answers in chrome & firefox dues to turbolinks js

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
 
 %body
   = render 'layouts/header'
-  = flash.each do |key, value|
-    = content_tag(:div, value, class: "alert alert-#{key}")
-  = yield
+  .container
+    - flash.each do |key, value|
+      = content_tag(:div, value, class: "alert alert-#{key}")
+    = yield
