--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,10 +7,10 @@
           %li
             = link_to "Home", root_path
           %li
-            = link_to "Help", '#'
+            = link_to "Quizzes", quizzes_path
           - if signed_in?
             %li
-              = link_to "Users", '#'
+              = link_to "Create Quiz", new_quiz_path
             %li(id="fat-menu" class="dropdown")
               %a(class="dropdown-toggle" 	data-toggle="dropdown" href="#" )
                 Account 
@@ -18,7 +18,7 @@
               %ul(class="dropdown-menu")
                 %li
                   = link_to "Profile", current_user
-                  = link_to "Settings", '#'
+                  = link_to "Settings", edit_user_path(current_user)
                 %li(class="divider")
                 %li
                   = link_to "Sign out", signout_path, method: "delete"
@@ -26,28 +26,3 @@
           - else
             %li
               = link_to "Sign in", signin_path
-
-/ header class="navbar navbar-fixed-top navbar-inverse"
-/   .navbar-inner
-/     .container"
-/       = link_to "Home", 'root_path', id: "logo" 
-/       %nav
-/         %ul(class="nav pull-right")
-/         	%li
-/           	= link_to "Home",    '#' 
-/           %li
-/           	= link_to "Help",    '#' 
-/           %li
-/           	= link_to "Sign in", '#' 
- 
-
-/ header
-/   = link_to "Home_image", root_path, id: "logo"
-/   = link_to "Home", root_path
-/   - if signed_in?
-/     = link_to "Users", users_path
-/     = link_to "Profile", current_user
-/     = link_to "Settings", edit_user_path(current_user)
-/     = link_to "Sign out", signout_path, method: "delete"
-/   - else
-/     = link_to "Sign in", signin_path
