--- a/app/views/quizzes/_answer_fields.html.haml
+++ b/app/views/quizzes/_answer_fields.html.haml
@@ -6,6 +6,6 @@
   = f.check_box :correctness
 
   = f.hidden_field :_destroy
-  = link_to "Remove", "#", class: "remove_answer", name: "remove_answer", id: "remove_answer"
+  = link_to "Remove", "#", class: "remove_answer", name: "remove_answer",:"data-no-turbolink"	=> true
 
 
