--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,2 +1,6 @@
 %h1 StaticPages#home
 %p Find me in app/views/static_pages/home.html.haml
+
+- @quiz.each do |quiz|
+  = link_to quiz.title, quiz, id: quiz.id, name: quiz.id
+  = link_to quiz.title, new_quiz_attempt_path(quiz)
