--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,6 +10,8 @@
             = link_to "Quizzes", quizzes_path
           - if signed_in?
             %li
+              = link_to "Users", users_path
+            %li
               = link_to "Create Quiz", new_quiz_path
             %li(id="fat-menu" class="dropdown")
               %a(class="dropdown-toggle" 	data-toggle="dropdown" href="#" )
