--- a/app/views/quizzes/_form.html.haml
+++ b/app/views/quizzes/_form.html.haml
@@ -1,8 +1,12 @@
-= form_for @quiz do |f|
-  / = f.error_messages
-  = f.text_field :title, placeholder: 'Your title here'
+#form
+  = form_for @quiz do |f|
+    / = f.error_messages
+    = f.text_field :title, placeholder: 'Your title here'
 
-  = f.fields_for :questions do |builder|
-    = render 'question_fields', :f => builder
+    = f.fields_for :questions do |builder|
+      = render 'question_fields', :f => builder
 
-  = f.submit "Submit"
+    = link_to "Add question", "#", class: "add_question"
+
+    = f.submit "Submit"
+
