--- a/app/views/quizzes/index.html.haml
+++ b/app/views/quizzes/index.html.haml
@@ -1,7 +1,13 @@
 %h1 Quizzes
 
-- @quiz.each do |quiz|
-  .quiz_container
-    = link_to quiz.title, quiz, id: quiz.id, name: quiz.id
-    = link_to "Play", new_quiz_attempt_path(quiz)
-    = link_to "Play Multiplayer", new_quiz_multiplayer_attempt_path(quiz)
+= will_paginate
+
+%ul.index
+  - @quizzes.each do |quiz|
+    %li
+      .quiz_container
+        = link_to quiz.title, quiz, id: quiz.id, name: quiz.id
+        = link_to "Play", new_quiz_attempt_path(quiz)
+        = link_to "Play Multiplayer", new_quiz_multiplayer_attempt_path(quiz)
+
+= will_paginate 
